  with given shot name
- abstractClasses: Environment class now has a property named asset to get and
  set asset of the environment
- shotEditor: the cancel button renamed to close
- environmentFactory: to help creating environments a new class is introduced
- shotEditor: a lot of bugs are eliminated, the interface works much better now

v10.1.5
- houdiniEnv: fixed IOError for missing file.history file

v10.1.4
- projectModel: fixed a typo in sequence classes addShots method
- nukeEnv : fixed the path problems for autosave files under Windows

v9.12.30
- projectModel: fixed listing of folders instead of just files in sequence
  class
- houdiniEnv: now uses the inverse of the recent files list

v9.12.29
- projectModel: the sequence class now can undo the last change in the
  .settings.xml, but beware that there is no redo implementation yet
- projectModel: added name check before adding a new assetType
- projectModel: added again the extension checking for the files returned from
  the sequence.getAllAssetFileNamesForType method
- assetModel: silly codes removed from assetType class
- assetUpdater: the texts aligned to verticall center also
- assetUpdater: selectAll push button now works
- assetUpdater: added selectNone button
- shotEditor: added a simple editor to edit the shot start and end frames and
  the shot description
- projectModel: added getShots to the sequence class, which returns shot
  objects as a list
- assetManager: added invalidCharacterRemove call to the assetManager UI while
  validating the sub and baseName fields. Now it just removes the invalid
  characters instead of converting them to the ascii counterparts

v9.12.28
- the CachedMethod and the InputBasedCachedMethod objects now returns more
  meaningfull represantation of the cached methods

v9.12.27
- the database class is renamed to repository to more correctly reflect the
  current design
- the repository class moved to repositoryModel.py under dataModels